<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FFShare</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_logs">Logs</string>
    <string name="menu_item_delete_logs">Delete all Logs</string>

    <string name="error_no_uri_intent">No media found in intent</string>
    <string name="error_unknown_filetype">Unknown/Unsupported filetype</string>
    <string name="error_invalid_file">Invalid file</string>

    <string name="command_x_of_y">%1$d of %2$d</string>

    <string name="ffmpeg_error">Error compressing media</string>
    <string name="ffmpeg_canceled">Canceled</string>

    <string name="close">Close</string>
    <string name="ffmpegCommandTitle">FFmpeg command</string>
    <string name="ffmpegOutputTitle">FFmpeg output</string>

    <string name="log_output_copy">Copy</string>
    <string name="log_copied_toast">Log Saved to Clipboard</string>
    <string name="logs_disabled" translatable="false">Logs are disabled</string>

    <string name="title_activity_logs">Logs</string>

    <string name="version">Version: %s</string>
    <string name="flavor" tools:ignore="MissingTranslation">Flavor: %s</string>


    <string name="app_description">Compress images and videos through ffmpeg before sharing them</string>
    <string name="introduction_line_0">App Created by caydey <a href="https://github.com/caydey/ffshare">github</a></string>
    <string name="introduction_line_1">Functionality (and code) inspired by Scrambled-Exif by juanitobananas <a href="https://gitlab.com/juanitobananas/scrambled-exif">gitlab</a></string>
    <string name="introduction_line_2">FFmpeg library used is ffmpeg-kit by arthenica <a href="https://github.com/arthenica/ffmpeg-kit">github</a></string>

    <string name="select_file_button" tools:ignore="MissingTranslation">Select file</string>

    <string name="ffmpeg_command">ffmpeg command running:</string>
    <string name="input_file">Input file:</string>
    <string name="input_file_size">Input size:</string>
    <string name="output_file">Output file:</string>
    <string name="output_file_size">Output size:</string>

    <string name="processed">Processed</string>
    <string name="remaining">Remaining</string>
    <string name="x_of_x">of</string>

    <string name="word_reduction">reduction</string>
    <string name="media_reduction_message">%1$s (%2$.1f%% reduction)</string>
    <string name="format_percentage" translatable="false">%.1f%%</string>

    <string name="cancel_ffmpeg">Cancel</string>

    <string name="logs_clear">Clear</string>

    <!-- Settings -->
    <string name="settings_save_logs">Enable logs</string>
    <string name="settings_save_logs_summary">Save all executed FFmpeg commands</string>

    <string name="settings_compression_options_title">Compression options</string>
    <string name="settings_conversions_options_title">Conversion options</string>
    <string name="settings_output_options_title">Output Options</string>

    <string name="settings_compressed_media_name">Compressed media name</string>
    <string name="settings_compressed_media_name_summary">What to rename a compressed file to</string>

    <string name="settings_compressed_media_custom_name">Custom media name</string>
    <string name="settings_compressed_media_custom_name_summary">Only applicable if "Custom" is selected for compressed media name</string>

    <string name="settings_convert_videos_to_mp4">Convert all video formats to mp4</string>
    <string name="settings_convert_audios_to_mp3">Convert all audio formats to mp3</string>
    <string name="settings_convert_images_to_jpg" tools:ignore="MissingTranslation">Convert all image formats to jpg</string>

    <string name="settings_convert_image_output" tools:ignore="MissingTranslation">Image file output extension</string>
    <string name="settings_convert_video_output" tools:ignore="MissingTranslation">Video file output extension</string>
    <string name="settings_convert_audio_output" tools:ignore="MissingTranslation">Audio file output extension</string>
    <string name="settings_treat_gifs_as_videos">Treat GIFs as videos</string>

    <string name="settings_copy_exif_tags">Preserve Exif tags</string>
    <string name="settings_copy_exif_tags_summary">Preserve Exif tags for output files</string>

    <string name="settings_jpeg_qscale">JPEG image qscale</string>
    <string name="settings_jpeg_qscale_summary">Lower value will result in a larger file size with greater quality (default 10)</string>

    <string name="settings_video_crf">Video crf</string>
    <string name="settings_video_crf_summary">(Constant Rate Factor) Lower value will result in a larger file size with greater quality (default 23)</string>

    <string name="settings_video_max_file_size">Video max file size</string>
    <string name="settings_video_max_file_size_summary">Adjusts video bitrate to create an output less than the specified file size</string>

    <string name="settings_max_video_resolution" tools:ignore="MissingTranslation">Max video resolution</string>
    <string name="settings_max_video_resolution_summary" tools:ignore="MissingTranslation">Reduce the video output resolution</string>
    <string name="settings_max_image_resolution" tools:ignore="MissingTranslation">Max image resolution</string>
    <string name="settings_max_image_resolution_summary" tools:ignore="MissingTranslation">Reduce the image output resolution</string>

    <string name="settings_video_codec" tools:ignore="MissingTranslation">Video Codec</string>
    <string name="settings_audio_codec" tools:ignore="MissingTranslation">Audio Codec</string>

    <string name="settings_custom_params_title" tools:ignore="MissingTranslation">Custom Parameters</string>
    <string name="settings_custom_params_summary" tools:ignore="MissingTranslation">If set, only these parameters will be used</string>
    <string name="settings_custom_video_params" tools:ignore="MissingTranslation">Custom Video Parameters</string>
    <string name="settings_custom_image_params" tools:ignore="MissingTranslation">Custom Image Parameters</string>
    <string name="settings_custom_audio_params" tools:ignore="MissingTranslation">Custom Audio Parameters</string>

    <string name="settings_interface_options_title">Interface</string>

    <string name="settings_show_status_messages">Show status messages</string>
    <string name="settings_show_status_messages_summary">Show output file size in toast messages</string>

    <string name="settings_compression_preset">FFmpeg compression preset</string>
    <string name="settings_compression_preset_summary">Slower speed with a higher quality output or faster speed with a lower quality output</string>
</resources>