<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblFfmpegCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ffmpeg_command"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtFfmpegCommand"
        app:layout_constraintEnd_toEndOf="@+id/txtFfmpegCommand"
        app:layout_constraintStart_toStartOf="@+id/txtFfmpegCommand" />

    <TextView
        android:id="@+id/txtFfmpegCommand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:breakStrategy="simple"
        android:fontFamily="monospace"
        android:hyphenationFrequency="none"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblInputFile"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/input_file"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtInputFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:breakStrategy="simple" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblInputFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_file_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtInputFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblOutputFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/output_file"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOutputFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:breakStrategy="simple"
                android:hyphenationFrequency="none"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblOutputFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_file_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtOutputFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/processedTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblProcessed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/processed"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtProcessedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/x_of_x" />

                <TextView
                    android:id="@+id/txtProcessedTimeTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtProcessedPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp" />
            </TableRow>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cancel_ffmpeg"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="@+id/tableLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <TextView
        android:id="@+id/txtCommandNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lblFfmpegCommand"
        app:layout_constraintEnd_toEndOf="@+id/lblFfmpegCommand"
        app:layout_constraintStart_toStartOf="@+id/lblFfmpegCommand" />

</androidx.constraintlayout.widget.ConstraintLayout>